...
    <string name="label_tags">Tags:</string>
    <string name="label_force_tcp">Force TCP:</string>
    <string name="delete_dialog_title">Delete \"%1\"</string>
    <string name="delete_dialog_message">Are you sure you want to delete this item? This action cannot be undone.</string>
    <string name="rtsp_item_preview_description">Preview for \"%1\"</string>
    <string name="no_stream_available">No stream available</string>
    <string name="tags_all">All</string>

    <string name="description_more_button">More Button</string>
    <string name="description_close_button">Close Button</string>
    <string name="description_end_sorting_button">End Sorting Button</string>
</resources>

